test/parse/module/bad-export-func-undefined.txt
;;; ERROR: 1
(module (export "foo" (func 0)))
(;; STDERR ;;;
out/test/parse/module/bad-export-func-undefined.txt:2:29: error: function variable out of range (max 0)
(module (export "foo" (func 0)))
                            ^
;;; STDERR ;;)
